app/assets/stylesheets/components/common/_global_nav.scss
// Global Navigation
//
// Styleguide Global Navigation

.global-nav {
  transition-property: transform;
  transition-duration: 1s;
  position: fixed;
  z-index: 5;
  width: 100%;
  transform: translateX(100%);

  &.no-transition {
    transition: none;
  }

  @include respond-to($mq-m) {
    transition: none;
    position: relative;
    transform: none;
    background: $color-yellow-light;

    /* non-FlexBox compliant -- */
    display: table;
    height: 100%;
    /* -- non-FlexBox compliant */
  }

  &.is-active {
    transform: translateX(0%);
  }
}

.global-nav__arrow {
  position: absolute;
  width: (18px / 34) * 25;
  height: 25px;

  @include respond-to($mq-m) {
    display: none;
  }
}

.global-nav__clumps {
  transition-property: transform;
  transition-duration: 1s;
  position: absolute;
  left: 0;
  transform: translateX(0%);
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
  background: $color-yellow-light;
  font-size: 1rem;

  @include respond-to($mq-m) {
    @include column(12);

    transition: none;
    transform: none;
    position: static;
    background: transparent;
    display: inline-block;

    /* non-FlexBox compliant -- */
    display: table-row;
    /* -- non-FlexBox compliant */
  }

  &.is-active {
    transform: translateX(-100%);

    @include respond-to($mq-m) {
      transform: none;
    }
  }
}

.global-nav__clump {
  border-bottom: solid 1px rgba(0, 0, 0, 0.375);
  box-shadow: inset 0 -1px 2px 0 rgba(0, 0, 0, 0.375);
  position: static;
  margin: 0;
  line-height: 1;

  .global-nav__arrow {
    right: $default-gutter;
  }

  @include respond-to($mq-m) {
    border-bottom: none;
    box-shadow: none;

    /* non-FlexBox compliant -- */
    display: table-cell;
    width: (100% / 8);
    vertical-align: bottom;
    /* -- non-FlexBox compliant */

    .global-nav__arrow {
      display: none;
    }
  }

  &.is-active {
    .global-subnav {
      visibility: visible;
      transition-delay: 0s;

      @include respond-to($mq-m) {
        display: block;
        transform: none;
      }
    }

    @include respond-to($mq-m) {
      background: $color-white;

      .global-nav__clump__heading__text:before,
      & + .global-nav__clump .global-nav__clump__heading__text:before {
        border-left: none;
      }
    }
  }
}

.global-nav__clump:last-child {
  border-bottom: none;
}

.global-nav__clump:first-child {
  border-top: none;

  @include respond-to($mq-m) {
    .global-nav__clump__heading__text:before {
      border-left: none;
    }
  }
}

.global-nav__clump__heading {
  @include column(12);

  display: inline-block;
  float: none;
  line-height: 25px;
  padding: $baseline-unit*2 0;
  border: none;
  background: transparent;
  text-align: left;

  @include respond-to($mq-m) {
    &:hover {
      background: $color-white;
    }
    &:focus {
      background: $color-grey-pale;
    }
    .is-active &:focus {
      background: $color-white;
    }

    position: relative;
    width: 100%;
    height: 100%;
    margin: 0;
    line-height: 1;
    text-align: center;
    padding: 0;
  }
}

.global-nav__clump__heading__text {
  @include respond-to($mq-m) {
    display: block;
    padding: $baseline-unit*2 $baseline-unit;
    font-weight: 700;
    font-size: 14px;
    font-size: 0.875rem;
    width: auto;

    &:after {
      content: "";
      display: inline-block;
      position: static;
      border-left: 5px solid transparent;
      border-right: 5px solid transparent;
      border-top: 5px solid $color-grey-primary;
      margin-left: 4px;
      margin-bottom: 2px;
    }
  }
}

.global-nav__clump__blog-link {
  background: $color-mas-blog-blue;
  border-radius: 4px;
  border: none;
  line-height: 30px;
  color: $color-white;
  font-weight: 700;
  padding: 0;
  text-transform: uppercase;
  width: auto;
  margin-top: $baseline-unit;
  margin-bottom: $baseline-unit;
  margin-left: $baseline-unit;
  height: auto;

  .global-nav__arrow {
    display: none;
  }

  &:hover {
    background: $color-mas-blog-blue-hover;
  }
}

/* non-FlexBox compliant -- */
.global-nav__clump__blog-link {
  @include respond-to($mq-m) {
    float: right;
  }
}
/* -- non-FlexBox compliant */

.global-nav__clump__blog-link__text {
  padding: $baseline-unit 10px;

  &:before {
    border-left: none;
  }
}

.global-nav__clump__description {
  display: none;

  @include respond-to($mq-m) {
    @include column(12);
    display: block;
    text-align: center;
  }
}

/* FlexBox compliant -- */
.flexbox {
  @include respond-to($mq-m) {
    .global-nav {
      display: block;
      height: auto;
    }

    .global-nav__clumps {
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;
      justify-content: center;
    }

    .global-nav__clump {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
      width: auto;
    }

    .global-nav__clump__heading {
      display: flex;
      flex-grow: 1;
    }
  }

  .global-nav__clump__heading__text {
      flex-grow: 1;
  }
}
/* -- FlexBox compliant */

